Update wistia embed code and fix social bar visibility

--- a/css/scss/_posts.scss
+++ b/css/scss/_posts.scss
@@ -72,10 +72,6 @@
 .episode-info {
 	margin-top: 3em;
 }
-.wistia_socialbar {
-	float:right;
-	margin-top:1rem!important;
-}
 [id*=requireEmail_text_below] {
 	font-size:2rem!important;
 	font-style:normal!important;
@@ -202,7 +198,7 @@
 
 
 .episode-nav {
-	margin:0.5em 0 1em;
+	margin:2.5em 0 1em;
 	overflow:hidden;
 }
 .episode-nav-next {
